# sot_controller

./: .gitignore  CMakeLists.txt  package.xml  setup.py  sot_controller_plugins.xml
config/: reem_cfg.vcg  reem_demo_hydro_nocam.rviz  reemc_cfg.vcg  veldamp_cfg.vcg
demofiles/: demo_ball_grasping.py  demo_ball_grasping_automatica.py  demo_collision_config.py  demo_collision_config_robot.py  demo_collision_dynamic.py  demo_collision_external.py  demo_collision_marker.py  demo_gaze_in_hand.py  demo_reach.py
include/sot_controller/: sot_controller.h  sot_device.h
launch/: ball_grasping_automatica.launch  controller_spawner.launch  dummy_act_mgr_test.ops  dummy_act_mgr_test_sot_reem.launch  dummy_act_mgr_test_sot_reem.launch~  dummy_act_mgr_test_sot_reem_gazebo.launch  dummy_act_mgr_test_sot_reem_gazebo.launch~  dummy_act_mgr_test_sot_reemc.launch  floor_frame_publisher.launch  reem_demo_collsion_nogfx.launch  reem_demo_dynamic_veldamp.launch  reem_demo_dynamic_veldamp_nocam.launch  reem_demo_dynamic_veldamp_nocam.launch~  reem_demo_dynamic_veldamp_nogfx.launch  reem_demo_dynamic_veldamp_nogfx.launch~  reem_demo_dynamic_veldamp_real_robot.launch  reem_demo_hydro_nocam.launch  reem_demo_hydro_nogfx.launch  reem_demo_reach.launch  reem_demo_static_veldamp.launch  reem_descriptions_sot.launch  reem_launch_demo.launch  reemc_descriptions_sot.launch  sot_gazebo_bringup.launch  sot_gazebo_bringup.launch~  sot_reem.launch  sot_reemc.launch
python_code/: floor_frame_publisher.py  sot_ros_api.py
python_code/demo/: demo_collision.py  demo_collision.py~  demo_collision_dynamic.py  demo_collision_dynamic.py~  demo_collision_dynamic_full.py  demo_collision_dynamic_test.py  demo_collision_static.py  demo_collision_static.py~  demo_dynamic_velocity_damping.py  demo_dynamic_velocity_damping.py~  demo_inequality.py  demo_non_actuated_joints.py  demo_reach.py~  demo_reem_weights.py  demo_reemc_weights.py  demo_static_velocity_damping.py
python_code/sot_robot/: prologue.py  robot.py
python_code/trash/: README  reemc_reach.py  reemc_reach_2.py  reemc_standup_2.py
scripts/: floor_frame_publisher.py
src/: sot_controller.cpp  sot_device.cpp
src/sot_ros_api/: __init__.py
src/sot_ros_api/demo/: demo_collision_dynamic.py  demo_head.py  demo_reach.py  demo_reem_ball_tracking.py  demo_reemc.py
src/sot_ros_api/trash/: com_publisher.py  reemc_equilibrium.py  reemc_equilibrium_2.py  reemc_standup.py  reemc_tracking.py  reemc_walk.py
src/sot_ros_api/utilities/: rosinterface.py  sot.py  tasks.py  tasks.py.unused
test/: test.cpp
