<?xml version="1.0"?>
<package>
  <name>sot_controller</name>
  <version>0.0.0</version>
  <description>The sot_controller package</description>
  
  <maintainer email="student@todo.todo">student</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>controller_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>dynamic_graph_bridge</build_depend>
  <build_depend>dynamic-graph</build_depend>
  <build_depend>sot-core</build_depend>
  <build_depend>sot-dyninv</build_depend>
  <build_depend>dynamic-graph-python</build_depend>
  <build_depend>forward_command_controller</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>ros_sot_robot_model</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>urdf</build_depend>
  
  <run_depend>sot-core</run_depend>
  <run_depend>sot-dyninv</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>dynamic_graph_bridge</run_depend>
  <run_depend>dynamic-graph</run_depend>
  <run_depend>dynamic-graph-python</run_depend>
  <run_depend>forward_command_controller</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>ros_sot_robot_model</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>urdf</run_depend>

  <export>
    <controller_interface plugin="${prefix}/sot_controller_plugins.xml"/>
  </export>
  
</package>
